PartitionIO now in lama for partitioned IO of distributions, test added.

--- a/scai/lama/examples/parallelIO/CMakeLists.txt
+++ b/scai/lama/examples/parallelIO/CMakeLists.txt
@@ -27,15 +27,15 @@
  # Fraunhofer SCAI. Please contact our distributor via info[at]scapos.com.
  # @endlicense
  #
- # @brief CMake configuration file for scai_lama examples
- # @author Jan Ecker
- # @date 02.12.2015
+ # @brief CMake configuration file for lama - parallel I/O examples
+ # @author Thomas Brandes
+ # @date 03.07.2016
 ###
 
 set ( EXAMPLE_FILES writeParallel.cpp readParallel.cpp utility.hpp PartitionIO.cpp PartitionIO.hpp )
 
-add_executable( writeParallel.exe writeParallel.cpp PartitionIO.cpp )
-add_executable( readParallel.exe readParallel.cpp PartitionIO.cpp )
+add_executable( writeParallel.exe writeParallel.cpp )
+add_executable( readParallel.exe readParallel.cpp )
 
 target_link_libraries( writeParallel.exe ${PROJECT_NAME} )
 target_link_libraries( readParallel.exe ${PROJECT_NAME} )
