--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -67,6 +67,7 @@ scai_project (
         NormTest
         ScalarTest
         FileIOTest
+        PartitionIOTest
         VectorTest
         VersionTest
     )
