added LUfactorization to CSRUtils -->MKL Pardiso/cuSOLVER; added PardisoError; added cusolverErrorString and SCAI_CUSOLVER_CALL; not finished yet

--- a/scai/sparsekernel/external/CMakeLists.txt
+++ b/scai/sparsekernel/external/CMakeLists.txt
@@ -35,7 +35,7 @@
 ### Add classes and header files ###
 
 if    ( SCAI_BLAS_NAME MATCHES "MKL" )
-	set ( CLASSES ${CLASSES} MKLCSRUtils )
+	set ( CLASSES ${CLASSES} MKLCSRUtils PardisoError )
 	set ( HEADERS ${HEADERS} MKLCSRTrait MKLCSRWrapper )
 endif ( SCAI_BLAS_NAME MATCHES "MKL" )
 
