dmemo: improved tests + code coverage

--- a/scai/dmemo/test/CMakeLists.txt
+++ b/scai/dmemo/test/CMakeLists.txt
@@ -46,6 +46,7 @@ scai_project (
     SOURCES
 
         CommunicatorTest
+        CommunicationPlanTest
 
         DistributedTest
         DistributionTest
