Added some more tests for dmemo

--- a/scai/dmemo/test/CMakeLists.txt
+++ b/scai/dmemo/test/CMakeLists.txt
@@ -51,6 +51,8 @@ scai_project (
         DistributedTest
         DistributionTest
 
+        HaloTest
+
         NoDistributionTest
         BlockDistributionTest
         CyclicDistributionTest
