Moved FileIO test to storage tests as it should never be executed by multiple processors

--- a/scai/lama/test/storage/CMakeLists.txt
+++ b/scai/lama/test/storage/CMakeLists.txt
@@ -55,6 +55,8 @@ scai_project (
         SparseAssemblyStorageTest
         DenseStorageTest
 
+        FileIOTest
+
         lamaStorageTest
     )
 
