Some cleanup for lama tests.

--- a/scai/lama/test/storage/CMakeLists.txt
+++ b/scai/lama/test/storage/CMakeLists.txt
@@ -55,6 +55,7 @@ scai_project (
         SparseAssemblyStorageTest
         DenseStorageTest
 
+        IOStreamTest
         FileIOTest
 
         lamaStorageTest
