dmemo::test has own file for TestDistributions to be used for other purposes

--- a/scai/dmemo/test/CMakeLists.txt
+++ b/scai/dmemo/test/CMakeLists.txt
@@ -58,6 +58,10 @@ scai_project (
         ${MetisDistributionTest}
 
         RedistributorTest
+
+    HEADERS
+
+        TestDistributions
     )
 
 ### checks ####
