Added tests for constructors of XXXSparseMatrix classes.

--- a/scai/lama/test/matrix/CMakeLists.txt
+++ b/scai/lama/test/matrix/CMakeLists.txt
@@ -47,6 +47,10 @@ scai_project (
         Creator
 
         CSRSparseMatrixTest
+        COOSparseMatrixTest
+        ELLSparseMatrixTest
+        DIASparseMatrixTest
+        JDSSparseMatrixTest
 
         lamaMatrixTest
     )
