MatrixConstructorTests now with template for all matrix types.

--- a/scai/lama/test/matrix/CMakeLists.txt
+++ b/scai/lama/test/matrix/CMakeLists.txt
@@ -46,11 +46,7 @@ scai_project (
         Redistribution
         Creator
 
-        CSRSparseMatrixTest
-        COOSparseMatrixTest
-        ELLSparseMatrixTest
-        DIASparseMatrixTest
-        JDSSparseMatrixTest
+        MatrixConstructorTest
 
         lamaMatrixTest
     )
