--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -38,30 +38,16 @@ scai_project (
 
     CLASSES
 
-       # Configuration
-        SparseMatrixHelper
-        SparseMatrixTest
-    
     HEADERS
         
-        SameMatrixHelper
-        EquationHelper
-        TestMacros
-        TestSparseMatrices
+       TestMacros
+       TestVectors
 
     SOURCES
 
-        COOSparseMatrixTest
-        CSRSparseMatrixTest
-        DenseMatrixTest
-        DenseMatrixTest1
-        DerivedSparseMatrixTest
-        DIASparseMatrixTest
-        ELLSparseMatrixTest
-        JDSSparseMatrixTest
+        DenseVectorTest
         L1NormTest
         L2NormTest
-        MatrixTest
         MaxNormTest
         NormTest
         ScalarTest
