solver tests cleaned, adapted run scripts for test and code coverage

--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -32,13 +32,13 @@
  # @date 25.01.2016
 ###
 
-add_subdirectory( distributed )
-
 scai_project ( 
 
 	CLASSES
 
 	HEADERS
+
+        EquationHelper
 
 	SOURCES
 
@@ -63,11 +63,12 @@ scai_project (
         RichardsonTest
         SimpleAMGTest
         SolutionProxyTest
-        SolverTest
-        SolverTest1
+        AllSolverTest
         TFQMRTest
         TimerTest
-        
+        VersionTest
+
+        solverTest
    )
    
 ### set include directories ###
