--- a/scai/tracing/test/make.inc.in
+++ b/scai/tracing/test/make.inc.in
@@ -32,8 +32,14 @@
  # @date 18.02.2016
 ###
 
-SCAI_BOOST_INCLUDE_DIR=${SCAI_BOOST_INCLUDE_DIR}
-SCAI_INCLUDES= -I"${CMAKE_CURRENT_SOURCE_DIR}/../.." -I"${CMAKE_BINARY_DIR}/include" -I"${CMAKE_INSTALL_PREFIX}/include"
-SCAI_CXX_FLAGS=${CMAKE_CXX_FLAGS}
-SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} -L.. -L${CMAKE_INSTALL_PREFIX}/lib -Wl,-rpath=${CMAKE_INSTALL_PREFIX}/lib -lscai_tracing -lscai_logging -lscai_common
-CXX=${CMAKE_CXX_COMPILER}
+SCAI_ROOT = ${CMAKE_INSTALL_PREFIX}
+
+SCAI_BOOST_INCLUDE_DIR = ${SCAI_BOOST_INCLUDE_DIR}
+
+CXX = ${CMAKE_CXX_COMPILER}
+
+CXX_FLAGS = ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}
+
+LINK_LIBRARIES = -lscai_tracing -lscai_logging -lscai_common
+
+SCAI_LD_FLAGS = ${CMAKE_EXE_LINKER_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib ${LINK_LIBRARIES}
