--- a/scai/logging/test/make.inc.in
+++ b/scai/logging/test/make.inc.in
@@ -32,7 +32,14 @@
  # @date 03.09.2015
 ###
 
-SCAI_ROOT="${CMAKE_INSTALL_PREFIX}"
-INCLUDE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../.."
-CXX=${CMAKE_CXX_COMPILER}
-CXX_FLAGS=${SCAI_LANG_FLAGS}
+SCAI_ROOT = ${CMAKE_INSTALL_PREFIX}
+
+SCAI_BOOST_INCLUDE_DIR = ${SCAI_BOOST_INCLUDE_DIR}
+
+CXX = ${CMAKE_CXX_COMPILER}
+
+CXX_FLAGS = ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}
+
+LINK_LIBRARIES = -lscai_logging -lscai_common
+
+SCAI_LD_FLAGS = ${CMAKE_EXE_LINKER_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib ${LINK_LIBRARIES}
