--- a/scai/lama/examples/CMakeLists.txt
+++ b/scai/lama/examples/CMakeLists.txt
@@ -37,6 +37,7 @@
 include_directories( "${CMAKE_CURRENT_BINARY_DIR}/../include" )
 
 add_subdirectory ( bench )
+add_subdirectory ( mandelbrot )
 add_subdirectory ( labelrank )
 add_subdirectory ( tutorial )
 add_subdirectory ( io )
