Some smaller problems fixed complex types are disabled

--- a/scai/common/SCAITypes.hpp.in
+++ b/scai/common/SCAITypes.hpp.in
@@ -41,6 +41,8 @@
 #include <scai/common/Complex.hpp>
 #endif
 
+#include <scai/common/config.hpp>
+
 #include <scai/common/mic/MICCallable.hpp>
 #include <scai/common/mepr/TypeList.hpp>
 #include <scai/common/mepr/TypeListUtils.hpp>
