--- a/scai/dmemo/test/code_coverage.sh.in
+++ b/scai/dmemo/test/code_coverage.sh.in
@@ -55,7 +55,7 @@ then
     for i in 1 2 3 4;
     do
         echo "Running distributed tests with $i MPI processes"
-        mpirun -np $i ./dmemoTest --SCAI_COMMUNICATOR=MPI >/dev/null
+        mpirun -np $i ./dmemoTest --SCAI_COMMUNICATOR=MPI --SCAI_NUM_THREADS=1 >/dev/null
         if [ $? -ne 0 ]
         then
             echo "ERROR in dmemoTest"
