corrections for copysign

--- a/scai/utilskernel/test/CMakeLists.txt
+++ b/scai/utilskernel/test/CMakeLists.txt
@@ -42,6 +42,7 @@ scai_project (
 
     SOURCES
 
+        ElementwiseOpTest
         ReductionOpTest
         UtilsKernelTest
         HArrayUtilsTest
