add forgotten ElementwiseOp.hpp to CMake

--- a/scai/utilskernel/CMakeLists.txt
+++ b/scai/utilskernel/CMakeLists.txt
@@ -111,6 +111,7 @@ scai_project (
 
     HEADERS                  # .hpp only
 
+        ElementwiseOp
         LAMAKernel
         LArray
         LArrayRef
