Added general unary and binary array operations in utilskernel, updated all related stuff.

--- a/scai/utilskernel/CMakeLists.txt
+++ b/scai/utilskernel/CMakeLists.txt
@@ -111,13 +111,12 @@ scai_project (
 
     HEADERS                  # .hpp only
 
-        ElementwiseOp
         LAMAKernel
         LArray
         LArrayRef
         UtilKernelTrait
-        ReductionOp
-        
+        BinaryOp
+        UnaryOp
 )
 
 
