--- a/scai/common/test/code_coverage.sh.in
+++ b/scai/common/test/code_coverage.sh.in
@@ -1,4 +1,4 @@
-#!/bin/bash -e
+#!/bin/bash
 
 ###
  # @file code_coverage.sh
@@ -32,6 +32,9 @@
 
 source scai_code_coverage_functions.sh
 
+# Check requirements for codecoverage
+requirements_coverage
+
 dirname=$(create_dir)
 echo "Create coverage directory: ${dirname}"
 
@@ -39,33 +42,20 @@ prepare_coverage $dirname ../..
 
 export SCAI_LOG=TRACE
 export SCAI_TRACE=time
-	
+
 # Running common tests
 echo "Running serial tests"
-./commonTest >/dev/null
-if [ $? -ne 0 ]
-then
-	echo "ERROR in commonTest"
-	error_count=$(($error_count + $?))
-fi
+count_error ./commonTest
 
 if [ -d cuda ];
 then
     #Running common CUDA tests
     echo "Running common CUDA tests"
-    ./cuda/commonCUDATest >/dev/null
-    if [ $? -ne 0 ]
-    then
-        echo "ERROR in commonCUDATest"
-        error_count=$(($error_count + $?))
-    fi
+    count_error ./cuda/commonCUDATest
 fi
 
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
-if [ $? == 1 ];
-then
-    exit 1
-fi
+exit_on_failure $?
 
 zip -qr ../common_coverage.zip *
