--- a/scai/sparsekernel/test/code_coverageThird.sh.in
+++ b/scai/sparsekernel/test/code_coverageThird.sh.in
@@ -1,4 +1,4 @@
-#!/bin/bash -e
+#!/bin/bash
 
 ###
  # @file sparsekernel/test/code_coverageThird.sh
@@ -32,14 +32,14 @@
 
 source scai_code_coverage_functions.sh
 
+# Check requirements for codecoverage
+requirements_coverage
+
 dirname=$(find_dir)
 echo "Found coverage directory: ${dirname}"
 
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
-if [ $? == 1 ];
-then
-    exit 1
-fi
+exit_on_failure $?
 
 zip -qr ../sparsekernel_coverage.zip *
