--- a/scai/solver/test/code_coverage.sh.in
+++ b/scai/solver/test/code_coverage.sh.in
@@ -86,6 +86,8 @@ then
 	count_error ./solverTest --SCAI_CONTEXT=MIC
 fi
 
+exit_on_failure ${error_count}
+
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
 exit_on_failure $?
