--- a/scai/kregistry/test/code_coverage.sh.in
+++ b/scai/kregistry/test/code_coverage.sh.in
@@ -47,6 +47,8 @@ export SCAI_TRACE=time
 echo "Running serial tests"
 count_error ./kregistryTest
 
+exit_on_failure ${error_count}
+
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
 exit_on_failure $?
