--- a/scai/tasking/test/code_coverage.sh.in
+++ b/scai/tasking/test/code_coverage.sh.in
@@ -54,6 +54,8 @@ then
     count_error ./cuda/taskingCUDATest
 fi
 
+exit_on_failure ${error_count}
+
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
 exit_on_failure
