--- a/scai/blaskernel/test/code_coverageSecond.sh.in
+++ b/scai/blaskernel/test/code_coverageSecond.sh.in
@@ -41,7 +41,7 @@ export SCAI_TRACE=time
 error_count=0
 
 # Running blaskernel serial
-echo "Running serial tests"
+echo "Running blaskernel tests on Host"
 count_error ./blaskernelTest --SCAI_CONTEXT=Host
 
 if [ -d ../cuda ]
@@ -53,8 +53,8 @@ fi
 
 if [ -d ../mic ]
 then
-    #Running common CUDA tests
-    echo "Running blaskernel tests with CUDA context"
+    #Running common MIC tests
+    echo "Running blaskernel tests with MIC context"
     count_error ./blaskernelTest --SCAI_CONTEXT=MIC
 fi
 
