--- a/scai/hmemo/test/code_coverage.sh.in
+++ b/scai/hmemo/test/code_coverage.sh.in
@@ -44,15 +44,15 @@ export SCAI_LOG=TRACE
 export SCAI_TRACE=time
 	
 # Running tests serial
-echo "Running serial tests"
+echo "Running hmemo tests on Host"
 count_error ./hmemoTest --SCAI_CONTEXT=Host
 
 if [ -d cuda ];
 then
 	#Running CUDA tests
-	echo "Running tests with CUDA context"
+	echo "Running hmemo tests with CUDA context"
 	count_error ./hmemoTest --SCAI_CONTEXT=CUDA
-	echo "Running cuda tests"
+	echo "Running hmemo CUDA tests"
 	count_error ./cuda/hmemoCUDATest
 fi
 
