--- a/scai/utilskernel/test/code_coverage.sh.in
+++ b/scai/utilskernel/test/code_coverage.sh.in
@@ -54,6 +54,13 @@ then
     count_error ./utilskernelTest --SCAI_CONTEXT=CUDA >/dev/null
 fi
 
+if [ -d ../mic ];
+then
+    #Running common MIC tests
+    echo "Running utilskernel tests on MIC"
+    count_error ./utilskernelTest --SCAI_CONTEXT=MIC >/dev/null
+fi
+
 exit_on_failure ${error_count}
 
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
