Changed absolute error to relative error in failing test.

--- a/scai/lama/examples/io/CMakeLists.txt
+++ b/scai/lama/examples/io/CMakeLists.txt
@@ -32,13 +32,15 @@
  # @date 02.12.2015
 ###
 
-set ( EXAMPLE_FILES matrixConvert.cpp vectorConvert.cpp )
+set ( EXAMPLE_FILES matrixConvert.cpp vectorConvert.cpp matrixRepartition.cpp )
 
 add_executable( matrixConvert.exe matrixConvert.cpp )
 add_executable( vectorConvert.exe vectorConvert.cpp )
+add_executable( matrixRepartition.exe matrixRepartition.cpp )
 
 target_link_libraries( matrixConvert.exe ${PROJECT_NAME} )
 target_link_libraries( vectorConvert.exe ${PROJECT_NAME} )
+target_link_libraries( matrixRepartition.exe ${PROJECT_NAME} )
 
 # configure make.inc for examples
 include ( Functions/prepareExamplesMakeInc )
