--- a/scai/logging/test/code_coverage.sh.in
+++ b/scai/logging/test/code_coverage.sh.in
@@ -51,6 +51,9 @@ count_error ./test.sh CODE_COVERAGE
 
 exit_on_failure ${error_count}
 
+# results in errors
+rm simpleLogging.gcda simpleLogging.gcno
+
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
 exit_on_failure $?
