--- a/scai/tracing/test/code_coverage.sh.in
+++ b/scai/tracing/test/code_coverage.sh.in
@@ -46,7 +46,7 @@ count_error ./test.sh
 
 # todo: remove this if jenkins cc works fine without it
 # problem with these, so first ignore
-#rm simpleTracing.gcno simpleTracing.gcda
+rm simpleTracing.gcno simpleTracing.gcda
 
 exit_on_failure ${error_count}
 
